fix horizontal scrollbar issue
removed 1000px fixed widths from page, container and header elements

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,6 @@ a {
 }
 
 .container {
-    width: 1000px;
     margin: 0 auto;
 }
 
@@ -58,7 +57,6 @@ a {
 }
 
 #header {
-    width: 1000px;
     height: 150px;
     margin: 0 auto;
     padding: 0 0;
@@ -162,7 +160,6 @@ a {
 
 /* Page */
 #page {
-    width: 1000px;
     margin: 0 auto;
     padding: 30px 0;
 }
